<resources>
    <string name="app_name">MyTapperGame-Android</string>
    <string name="directions">Tap the Button!</string>
    <string name="button">TAP ME!</string>
    <string name="game_over">GAME OVER</string>
    <string name="restart">Restart</string>
    <string name="tap_to_start">Tap to Start!</string>
    <string name="app_title">TAP FAST</string>
    <string name="play_button">Play</string>
    <string name="back_to_main">Main Menu</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="ad_id_interstitial">ca-app-pub-7697702478003807/3346660376</string>
    <string name="ad_id_banner">ca-app-pub-7697702478003807/3706587173</string>
    <string name="gameHeader">My Game App</string>
    <string name="preference_file_key">com.example.MyTapperGame-Android.PREFERENCE_FILE_KEY</string>


</resources>
