<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.daniel.mytappergame_android.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/directions"
        android:fontFamily="sans-serif"
        android:textSize="36sp"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/directionsLabel" />

    <Button
        android:text="@string/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tapMeButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@color/buttonColor"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/tap_to_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tapToStartLabel"
        android:textSize="46sp"
        android:layout_above="@+id/tapMeButton"
        android:layout_alignRight="@+id/directionsLabel"
        android:layout_alignEnd="@+id/directionsLabel" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeLabel"
        android:textSize="36sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="62dp" />

    <!-- view for AdMob Banner Ad -->
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/banner_adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_id_banner">
    </com.google.android.gms.ads.AdView>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scoreLabel"
        android:layout_marginBottom="10dp"
        android:textSize="36sp"
        android:textStyle="normal|bold"
        android:layout_above="@+id/tapToStartLabel"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
