<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game_over"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.daniel.mytappergame_android.GameOverActivity">

    <TextView
        android:text="@string/game_over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:id="@+id/gameOverLabel"
        android:textSize="36sp"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scoreLabel"
        android:textSize="36sp"
        android:layout_marginTop="63dp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:layout_below="@+id/gameOverLabel"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tapsPerSecondLabel"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/back_to_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mainMenuButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:textStyle="normal|italic" />

    <Button
        android:text="@string/restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/restartButton"
        tools:text="@string/restart"
        android:textSize="18sp"
        android:layout_marginBottom="25dp"
        android:layout_above="@+id/mainMenuButton"
        android:layout_centerHorizontal="true"
        android:textStyle="normal|bold|italic" />

</RelativeLayout>
